src/objects/Lookup__c.object
<CustomObject>
    <fields>
        <fullName>LookID__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>LookID__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterField__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lookup</relationshipLabel>
        <relationshipName>Lookup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup</label>
        <referenceTo>Lookup__c</referenceTo>
        <relationshipLabel>Lookup</relationshipLabel>
        <relationshipName>Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>